# BetPredictor

./: .deployment_refresh  .env.example  .gitignore  .replit  COMPREHENSIVE_FIXES.md  DATABASE_SETUP.md  DEPLOYMENT_STATUS.md  app.py  app.py.old  debug_app.py  performance_summary.md  pyproject.toml  replit.md  requirements.txt  sidebar_fix.html  simple_test.py  streamlit_app.py  supabase_setup.sql  test_ai_chat.py  test_caching_fix.py  test_confidence_calibration.py  test_db.py  test_espn_api.py  test_fixes_verification.py  test_game_generation.py  test_live_config.py  test_mlb_picks_simulation.py  test_simple_app.py  test_speed_optimization.py  verify_no_mock_data.py
.streamlit/: config.toml
data/: sample_data.py
models/: predictor.py
pages/: 1_Dashboard.py  2_Pricing.py  3_API_Documentation.py  4_Account.py  5_Support.py  6_Today_Predictions.py  admin_dashboard.py  ai_chat.py  ai_chat_clean.py  ai_predictions.py  all_sports.py  deep_analysis_dashboard.py  landing.py  live_odds.py  login.py  performance_tracking.py  signup.py  unified_analysis.py  user_dashboard.py  winning_picks.py
pages_backup/: 3_API_Documentation.py  4_Account.py  6_Today_Predictions.py  6_Today_Predictions.py.bak  ai_chat_clean.py  all_sports.py  business_home.py  customer_portal.py  live_diagnostics.py  modern_ai_chat.py  unified_analysis.py  user_dashboard.py
utils/: advanced_ai_strategy.py  ai_analysis.py  ai_chat.py  automated_picks_scheduler.py  cache_manager.py  calendar_widget.py  clean_pick_card.py  confidence_calibration.py  data_hub.py  data_processor.py  date_helper.py  (+30 more)
