[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "google-genai>=1.27.0",
    "numpy>=2.3.2",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.1",
    "trafilatura>=2.0.0",
]
